--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="title">
       <div class="center-content">
-        <img src="https://static.wikia.nocookie.net/deathbattle/images/1/17/435930_200x130.gif/revision/latest?cb=20181119224607" alt="shedoumae" width="25%">
+        <img src="https://i.redd.it/xwcrydn0a1fe1.gif" alt="shedoumae" width="25%">
         <h1 class="ubuntu-light">Scripts e Plataformas</h1>
       </div>
     </div>
